Fixed cookies message z-index

--- a/style.css
+++ b/style.css
@@ -665,6 +665,7 @@ h4 {
 .cookie-message {
   position: fixed;
   bottom: 0;
+  z-index: 50;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
